<resources>
    <string name="app_name">Gallery</string>
    <string name="app_title">Coon Gallery</string>
    <string name="app_update_dialog_content">A new version is available (%s).</string>
    <string name="app_update_dialog_action_download">Download</string>
    <string name="app_update_dialog_action_ignore">Ignore</string>
    <string name="items">%d items</string>
    <string name="library_album_all">All</string>
    <string name="library_album_trash">Trash</string>
    <string name="library_album_favourites">Favourites</string>
    <string name="library_album_pinned">Pinned</string>
    <string name="library_search_method_words">Contains words</string>
    <string name="library_search_method_text">Contains text</string>
    <string name="library_search_method_natural">Natural language</string>
    <string name="library_search_error_model">To use natural search, first download the search model from settings.</string>
    <string name="library_error_delete">Error while deleting file.</string>
    <string name="library_error_move">Error while moving file.</string>
    <string name="library_error_copy">Error while copying file.</string>
    <string name="library_error_resolve_path">Could not resolve file path.</string>
    <string name="library_error_missing_new_file">New file does not exist.</string>
    <string name="library_error_invalid_uri">Invalid item URI.</string>
    <string name="library_error_operation_failed">Operation failed.</string>
    <string name="library_error_invalid_action_type">Action type isn\'t valid.</string>
    <string name="library_error_missing_permissions">Missing permissions.</string>
    <string name="library_error_pending_action">There is a pending action.</string>
    <string name="library_error_item_in_destination_already">Item is already in the destination album.</string>
    <string name="library_error_item_in_trash">Item is in the trash.</string>
    <string name="library_error_item_in_trash_already">Item is already in the trash.</string>
    <string name="library_error_item_not_in_trash">Item is not in the trash.</string>
    <string name="library_error_item_in_favourites_already">Item is already favourited.</string>
    <string name="library_error_item_not_in_favourites">Item is not favourited.</string>
    <string name="context_option_rename">Rename</string>
    <string name="context_option_edit">Edit</string>
    <string name="context_option_share">Share</string>
    <string name="context_option_set">Set as</string>
    <string name="context_option_pip">Open in PiP</string>
    <string name="context_option_favourite">Add to favourites</string>
    <string name="context_option_unfavourite">Remove from favourites</string>
    <string name="context_option_move">Move to album</string>
    <string name="context_option_copy">Copy to album</string>
    <string name="context_option_trash">Move to trash</string>
    <string name="context_option_restore">Restore</string>
    <string name="context_option_restore_all">Restore all</string>
    <string name="context_option_delete">Delete</string>
    <string name="context_option_delete_all">Delete all</string>
    <string name="home_filtered_images">Showing only images</string>
    <string name="home_filtered_videos">Showing only videos</string>
    <string name="home_filtered_custom">Showing only custom</string>
    <string name="home_pinned_album">Album \"%s\" was pinned to the top.</string>
    <string name="home_pinned_reset">The pinned album has been reset.</string>
    <string name="home_pinned_tutorial">Tap and hold on an album to pin it.</string>
    <string name="home_search_hint">Search albums</string>
    <string name="home_search_navbar">Searching \"%s\"</string>
    <string name="home_refresh_pull">Pull to refresh</string>
    <string name="home_refresh_release">Release to refresh</string>
    <string name="home_refresh_refreshing">Refreshing…</string>
    <string name="home_error_remove_filters">Please, remove the current filter first.</string>
    <string name="album_loading_search">Searching…</string>
    <string name="album_loading_metadata">Loading \"%s\" metadata…</string>
    <string name="album_loading_selection_item">%d item selected</string>
    <string name="album_loading_selection_items">%d items selected</string>
    <string name="album_header">%d items</string>
    <string name="album_header_search">%d items - Searching for %s</string>
    <string name="album_search_hint">Search items</string>
    <string name="album_search_method">Method:</string>
    <string name="video_state_play">Play</string>
    <string name="video_state_pause">Pause</string>
    <string name="video_state_track">Track %d</string>
    <string name="video_state_track_default">Default</string>
    <string name="video_state_track_disabled">Disabled</string>
    <string name="video_option_speed">Playback speed</string>
    <string name="video_option_subtitles">Subtitles track</string>
    <string name="video_option_audio">Audio track</string>
    <string name="video_notification_channel_description">Appears when the video player is active.</string>
    <string name="viewer_option_properties">Properties</string>
    <string name="settings_title">Settings</string>
    <string name="settings_main_general_title">General</string>
    <string name="settings_main_general_app_title">App</string>
    <string name="settings_main_general_app_description">Updates, settings backups and app info.</string>
    <string name="settings_main_general_metadata_title">Metadata &amp; search</string>
    <string name="settings_main_general_metadata_description">Metadata rules, smart search and link management.</string>
    <string name="settings_main_screens_title">Screens</string>
    <string name="settings_main_screens_home_title">Home screen</string>
    <string name="settings_main_screens_home_description">Grid options management.</string>
    <string name="settings_main_screens_album_title">Album screen</string>
    <string name="settings_main_screens_album_description">Grid and advanced options management.</string>
    <string name="settings_main_screens_viewer_title">Viewer screen</string>
    <string name="settings_main_screens_viewer_description">Visible shortcuts management.</string>
    <string name="settings_main_screens_video_title">Video player</string>
    <string name="settings_main_screens_video_description">Player and advanced options management.</string>
    <string name="settings_app_update_title">Updates</string>
    <string name="settings_app_backup_check_title">Check for updates</string>
    <string name="settings_app_backup_check_description">Check for updates on app start.</string>
    <string name="settings_app_backup_title">Settings backup</string>
    <string name="settings_app_backup_create_title">Create a backup</string>
    <string name="settings_app_backup_create_description">Creates a backup of your settings.</string>
    <string name="settings_app_backup_recover_title">Restore a backup</string>
    <string name="settings_app_backup_recover_description">Restores a backup of your settings.</string>
    <string name="settings_app_about_title">About</string>
    <string name="settings_app_about_version_title">Version</string>
    <string name="settings_app_about_version_description">Coon Gallery v%s</string>
    <string name="settings_app_about_developer_title">Developer</string>
    <string name="settings_app_about_developer_description">Check out the things I make!</string>
    <string name="settings_app_about_repo_title">GitHub</string>
    <string name="settings_app_about_repo_description">Check for updates!</string>
    <string name="settings_app_about_copyright_title">Copyright © 2026</string>
    <string name="settings_app_about_copyright_description">Alejandro Paniagua Moreno / @BOTPanzer</string>
    <string name="settings_metadata_management_title">Metadata management</string>
    <string name="settings_metadata_management_modification_title">Metadata modification</string>
    <string name="settings_metadata_management_modification_description">Modify album metadata automatically when moving, copying or deleting items from an album.</string>
    <string name="settings_metadata_natural_title">Natural search</string>
    <string name="settings_metadata_natural_info_title">What is natural search?</string>
    <string name="settings_metadata_natural_info_description">Click to see what natural search is and how it works.</string>
    <string name="settings_metadata_natural_info_dialog_title">Natural search</string>
    <string name="settings_metadata_natural_info_dialog_description">Natural search lets you search items in different languages using natural sentences such as:</string>
    <string name="settings_metadata_natural_info_dialog_point1">A cat laying down.</string>
    <string name="settings_metadata_natural_info_dialog_point2">A blue car.</string>
    <string name="settings_metadata_natural_info_dialog_description_after">\nNote: It is required to setup links and download a machine learning model first.</string>
    <string name="settings_metadata_natural_manage_title">Search model</string>
    <string name="settings_metadata_natural_manage_description_checking">Checking…</string>
    <string name="settings_metadata_natural_manage_description_missing">Not downloaded.</string>
    <string name="settings_metadata_natural_manage_description_preparing">Preparing…</string>
    <string name="settings_metadata_natural_manage_description_downloading">Downloading %1$dMB… %2$.1f%%</string>
    <string name="settings_metadata_natural_manage_description_failed">Download failed.</string>
    <string name="settings_metadata_natural_manage_description_ready">Ready to use.</string>
    <string name="settings_metadata_natural_manage_action_download">Download</string>
    <string name="settings_metadata_natural_manage_action_cancel">Cancel</string>
    <string name="settings_metadata_natural_manage_action_delete">Delete</string>
    <string name="settings_metadata_links_title">Link management</string>
    <string name="settings_metadata_links_info_title">What are links?</string>
    <string name="settings_metadata_links_info_description">Click to see what links are and how they work.</string>
    <string name="settings_metadata_links_info_dialog_title">Links</string>
    <string name="settings_metadata_links_info_dialog_description">Links let you to backup your albums and enable smart search.</string>
    <string name="settings_metadata_links_info_dialog_point1">Add an album to enable backing it up in the sync service.</string>
    <string name="settings_metadata_links_info_dialog_point2">Add a metadata file to improve search and find things in your images.</string>
    <string name="settings_metadata_links_remove_content">Are you sure you want to delete link #%d?</string>
    <string name="settings_metadata_links_remove_action_remove">Delete</string>
    <string name="settings_metadata_links_add">Add link</string>
    <string name="settings_metadata_links_item_name">Link #%d: %s</string>
    <string name="settings_metadata_links_item_name_empty">Link #%d</string>
    <string name="settings_metadata_links_placeholder_album">Album folder</string>
    <string name="settings_metadata_links_placeholder_metadata">Metadata file</string>
    <string name="settings_home_grid_title">Items grid</string>
    <string name="settings_home_grid_row_title">Items per row · %d</string>
    <string name="settings_home_grid_row_description">The amount of albums to show per home screen row.</string>
    <string name="settings_album_grid_title">Items grid</string>
    <string name="dialog_search_method_good_for">Good for:</string>
    <string name="dialog_search_method_words_description">Checks if all words in the search are contained.</string>
    <string name="dialog_search_method_words_use">· Finding whole words like \"cat\" or \"pink\".</string>
</resources>