<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/methodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/dialog_search_method_words_name"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/methodDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_search_method_words_description"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_search_method_good_for"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/methodUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dialog_search_method_words_use"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>